fixed footer text being too big in mobile view

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -70,3 +70,13 @@ footer {
     color: snow;
     margin-bottom: 0.2rem;
 }
+
+@media screen and (max-width: 576px) {
+    .information-container div > h3 {
+        font-size: 20px;
+        text-decoration: underline;
+    }
+    .information-container div a {
+        font-size: 5vw;
+    }
+}
